# vmupro-sdk

./: .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  README_8md.html  dir_195aa4215760a77c8f43641b003b8f9c.html  dir_195aa4215760a77c8f43641b003b8f9c.js  dir_243a4ba6b4f893d71afbb5a3e90552fa.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d28a4824dc47e487b107a5db32ef43c4.js  dir_d8eb40f2d08535001f0f2e2cb4d19ceb.html  dir_e1ff94311761b5dd18a87f60299bdfd6.html  dir_e1ff94311761b5dd18a87f60299bdfd6.js  files.html  files_dup.js  globals.html  globals_enum.html  globals_eval.html  globals_func.html  globals_vars.html  hello_8c.html  hello_8c_source.html  index.html  navtreedata.js  navtreeindex0.js  vmupro-toolchain.cmake  vmupro__display_8h.html  vmupro__display_8h_source.html  vmupro__log_8h.html  vmupro__log_8h.js  vmupro__log_8h_source.html  vmupro__sdk_8h.html  vmupro__sdk_8h.js  vmupro__sdk_8h_source.html  vmupro__utils_8h.html  vmupro__utils_8h_source.html
.github/workflows/: docs.yml
docs/: README.md  SUMMARY.md  book.json  c-getting-started.md  c-sdk-overview.md  getting-started.md  header.html  lua-sdk-overview.md  stdlib_functions.md
docs/api/: audio.md  blitting.md  c-audio.md  c-display.md  c-file.md  c-fonts.md  c-input.md  c-peernet.md  c-system.md  collision.md  display.md  doublebuffer.md  effects.md  file.md  filesystem.md  graphics.md  input.md  instrument.md  layers.md  sequence.md  sprites.md  synth.md  system.md  utility.md
docs/examples/: c-examples.md  hello-world.md
docs/guides/: audio-guide.md  c-first-app.md  file-operations.md  first-app.md  graphics-guide.md
docs/html/: README_8md.html  _2Users_2thanos_2Projects_28BitMods_2vmupro-sdk_2sdk_2include_2vmupro_audio_8h-example.html  _2Users_2thanos_2Projects_28BitMods_2vmupro-sdk_2sdk_2include_2vmupro_display_8h-example.html  _2Users_2thanos_2Projects_28BitMods_2vmupro-sdk_2sdk_2include_2vmupro_fonts_8h-example.html  annotated.html  annotated_dup.js  classes.html  dir_195aa4215760a77c8f43641b003b8f9c.html  doxygen_crawl.html  examples.html  (+74 more)
examples/minimal/: .gitignore  CMakeLists.txt  metadata.json  pack.ps1  pack.sh  sdkconfig  send.ps1  send.sh  vmupro_main.c
examples/minimal/assets/: TextAsset.txt
examples/minimal/main/: CMakeLists.txt  hello.c
sdk/: CMakeLists.txt  Doxyfile  dummy.c  vmu_stub.c  vmupro.ld
search/: all_0.js  all_10.js  all_12.js  all_13.js  all_15.js  all_2.js  all_3.js  all_4.js  all_6.js  all_a.js  all_c.js  all_e.js  functions_0.js  functions_1.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
(+300 files in other folders)
